add link for open source

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
           </div>
         </div>
       </div>
+      <p class="weather-app link">
+        <a href="https://github.com/sahesh2003/SheCodesPlus-Github"
+          >Open-source code,</a
+        >
+        by Saideh Heshmati
+      </p>
     </div>
     <script src="index.js"></script>
     <script
