--- a/index.html
+++ b/index.html
@@ -42,23 +42,25 @@
           <li id="weatherName">Partly Cloudy</li>
         </ul>
         <div class="row">
-          <div class="col-6">
-            <div class="clearfix">
+          <div class="col-8">
+            <div class="row ">
+              <div class="col-2">
               <img
                 src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
                 alt="Cloudy icon"
                 class="weather-icon float-left" />
-              <br />
-              <div class="float-left">
-                <span class="temperature" id="temperature">19</span
-                ><span class="units">
-                  <a href="#" id="celsius-link">°C</a>
-                  <a href="#" id="fahrenheit-link">°F</a>
-                </span>
               </div>
+              <div class="col-3 float-left mr-0">
+                <span class="temperature" id="temperature">19</span>
+                </div>
+              <div class="col-3 units">
+                  <a href="#" id="celsius-link">°C</a> |
+                  <a href="#" id="fahrenheit-link">°F</a>
+              </div>
+              
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-4">
             <ul>
               <li id="humidity">Humidity: 77%</li>
               <li id="wind">Wind: 8 km/h</li>
