--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 class="weather-icon float-left" />
               </div>
               <div class="col-3 float-left mr-0">
-                <span class="temperature" id="temperature">19</span>
+                <span class="temperature" id="temperature"></span>
                 </div>
               <div class="col-3 units">
-                  <a href="#" id="celsius-link">°C</a> |
+                  <a href="#" id="celsius-link" class="active">°C</a> |
                   <a href="#" id="fahrenheit-link">°F</a>
               </div>
               
