--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
             <div class="row ">
               <div class="col-2">
               <img
-                src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-                alt="Cloudy icon"
-                class="weather-icon float-left" />
+                src=""
+                alt=""
+                class="weather-icon float-left" 
+                id="weather-icon"/>
               </div>
               <div class="col-3 float-left mr-0">
                 <span class="temperature" id="temperature"></span>
