add Tehran as default

--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
             
           </div>
         </form>
-        <h1 id="city">Sydney NSW, Australia</h1>
+        <h1 id="city"></h1>
         <ul>
           <li id="date"></li>
-          <li id="weatherName">Partly Cloudy</li>
+          <li id="weatherName"></li>
         </ul>
         <div class="row">
           <div class="col-8">
             <div class="row ">
-              <div class="col-2">
+              <div class="col-2 align-content-start" id="weather-img">
               <img
                 src=""
                 alt=""
                 class="weather-icon float-left" 
                 id="weather-icon"/>
               </div>
-              <div class="col-3 float-left mr-0">
+              <div class="col-3 float-left mr-0" id="weather-tempreture">
                 <span class="temperature" id="temperature"></span>
                 </div>
               <div class="col-3 units">
@@ -63,8 +63,8 @@
           </div>
           <div class="col-4">
             <ul>
-              <li id="humidity">Humidity: 77%</li>
-              <li id="wind">Wind: 8 km/h</li>
+              <li id="humidity"></li>
+              <li id="wind"></li>
             </ul>
           </div>
         </div>
