--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </ul>
         <div class="row">
           <div class="col-8">
-            <div class="row ">
+            <div class="row mt-3">
               <div class="col-2 align-content-start" id="weather-img">
               <img
                 src=""
@@ -69,7 +69,7 @@
           </div>
         </div>
       </div>
-      <p class="weather-app link">
+      <p class="weather-app link mt-0 pt-0">
         <a href="https://github.com/sahesh2003/SheCodesPlus-Github"
           >Open-source code,</a
         >
