add forecast HTML with JS

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
             </ul>
           </div>
         </div>
+        <div class="row" id="forecast">
+          
+        </div>
       </div>
       <p class="weather-app link mt-0 pt-0">
         <a href="https://github.com/sahesh2003/SheCodesPlus-Github"
