--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 autofocus="on"
                 autocomplete="off"
                 id="city-input"
-                class="form-control shadow-sm" />
+                class="form-control shadow-sm input" />
             </div>
             <div class="col-3">
               <input
@@ -55,8 +55,7 @@
                 <span class="temperature" id="temperature"></span>
                 </div>
               <div class="col-3 units">
-                  <a href="#" id="celsius-link" class="active">°C</a> |
-                  <a href="#" id="fahrenheit-link">°F</a>
+                   <span> °C</span>
               </div>
               
             </div>
@@ -72,7 +71,7 @@
           
         </div>
       </div>
-      <p class="weather-app link mt-0 pt-0">
+      <p class="weather-app link mt-0 pt-0" id="endNote">
         <a href="https://github.com/sahesh2003/SheCodesPlus-Github"
           >Open-source code,</a
         >
